# avito

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yaml  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 2024_05_11_1821-4ed9ffb70cb8_new_tables.py  2024_05_11_2042-8a0d92665a7b_add_new_tables.py
src/: main_api.py  specific.py
src/database/: __init__.py  connection.py
src/database/secondary/: __init__.py  order_products.py  product_review.py
src/order/: __init__.py  crud.py  models.py  router.py  schemas.py
src/products/: __init__.py  crud.py  models.py  router.py  schemas.py
src/repository/: __init__.py  repository.py
src/review/: __init__.py  crud.py  models.py  router.py  schemas.py
src/service/: __init__.py  service.py
src/users/: backend.py  manager.py  models.py  repository.py  router.py  schemas.py
