[tool.poetry]
name = "avito"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
aiofiles = "^23.2.1"
uvicorn = "^0.29.0"
aiosqlite = "^0.20.0"
black = "^24.4.2"
pydantic-extra-types = "^2.7.0"
phonenumbers = "^8.13.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
